--- a/src/App.css
+++ b/src/App.css
@@ -2,37 +2,26 @@
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.wordRow {
+  border: 0.2rem solid rgba(255, 255, 255, 0);
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.wordBoard {
+  max-width: calc(4rem * 5.1);
+  width: 100%;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.keyboard {
+  width: 100%;
+  max-width: calc(4rem * 7.1);
 }
 
-.App-link {
-  color: #61dafb;
+.keyboardKey, .letterTile {
+  font-weight: bold;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.keyboardLetter {
+  width: 10%;
+  height: 3rem;
+  margin: 0.1rem;
 }
