Design layout changes

--- a/src/App.css
+++ b/src/App.css
@@ -8,20 +8,56 @@
 
 .wordBoard {
   max-width: calc(4rem * 5.1);
-  width: 100%;
+  width: 90%;
 }
 
 .keyboard {
-  width: 100%;
+  width: 95%;
   max-width: calc(4rem * 7.1);
 }
 
-.keyboardKey, .letterTile {
-  font-weight: bold;
+ * {
+  font-weight: bold !important;
+}
+
+.headerButton, .headerButton * {
+  font-weight: 400 !important;
+  background: none !important;
 }
 
 .keyboardLetter {
   width: 10%;
+}
+
+.keyboardKey {
+  border-color: none;
   height: 3rem;
   margin: 0.1rem;
+
+}
+
+.modalClose {
+  position: absolute;
+  top: 3%;
+  right: 1%;
+}
+
+.headerModal {
+  margin: auto;
+  max-width: 600px;
+}
+
+/**.currentRow::after {
+  content: '\f0a8';
+  font-family: 'Font Awesome 5 Free';
+  font-weight: 900;
+  z-index: 1000;
+  position: relative;
+  left: 1rem;
+}**/
+
+@media only screen and (max-width: 600px) {
+  .keyboard, .wordBoard{
+    margin-top: 5%;
+  }
 }
