--- a/src/App.css
+++ b/src/App.css
@@ -28,7 +28,7 @@
 }
 
 .keyboardLetter {
-  width: 10%;
+  width: 9%;
 }
 
 .keyboardKey {
@@ -59,6 +59,10 @@
 
 .letterTile:last-child{
   margin-right: 0 !important;
+}
+
+:focus-visible {
+  outline: none;
 }
 
 @media only screen and (max-width: 600px) {
